Closed Bug 488975 Opened 16 years ago Closed 16 years ago

|nsMsgFolderDataSource.cpp(2467) : warning C4018: '>' : signed/unsigned mismatch|

Categories

(MailNews Core :: Database, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b3

People

(Reporter: sgautherie, Assigned: sgautherie)

References

()

Details

Attachments

(1 file)

[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.2a1pre) Gecko/20090417 SeaMonkey/2.0b1pre] (experimental/_m-c_, home, optim default) (W2Ksp4) (http://hg.mozilla.org/mozilla-central/rev/9e06217fc471 +http://hg.mozilla.org/comm-central/rev/...) Code is { PRUint32 curFaveFoldersCount = m_folders.Count(); if (curFaveFoldersCount > m_maxNumFolders) } with { PRInt32 m_maxNumFolders; }
Assignee: nobody → sgautherie.bz
Status: NEW → ASSIGNED
Attachment #373466 - Flags: superreview?(bienvenu)
Attachment #373466 - Flags: review?(bienvenu)
Comment on attachment 373466 [details] [diff] [review] (Av1) s/PRInt32/PRUint32/ [Checkin: Comment 3] thx for the patch
Attachment #373466 - Flags: superreview?(bienvenu)
Attachment #373466 - Flags: superreview+
Attachment #373466 - Flags: review?(bienvenu)
Attachment #373466 - Flags: review+
Attachment #373466 - Attachment description: (Av1) s/PRInt32/PRUint32/ → (Av1) s/PRInt32/PRUint32/ [Checkin: Comment 3]
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: