Bug 488975 - |nsMsgFolderDataSource.cpp(2467) : warning C4018: '>' : signed/unsigned mismatch|; (Av1) s/PRInt32/PRUint32/; r+sr=bienvenu